<resources>
    <string name="app_name">LogBook</string>
    <string name="btn_concluir">Concluir</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_salvar">Salvar Memória</string>
    <string name="hint_title">Título da memória</string>
    <string name="hint_description">Descrição da Memória</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_ok">OK</string>
    <string name="dialog_delete_memory">Deseja excluir essa memória?</string>
</resources>
